# snapture

./: .gitignore  Cargo.toml  README.md
.agents/skills/ui-design/: SKILL.md
models/: README.md
packaging/: snapture.desktop
scripts/: install-desktop-entry.sh
src/: app.rs  config.rs  error.rs  launch.rs  main.rs
src/capture/: mod.rs  portal.rs
src/editor/: canvas.rs  document.rs  history.rs  mod.rs
src/model/: mod.rs  overlay.rs  types.rs
src/services/: clipboard.rs  mod.rs  ocr.rs  save.rs
src/tools/: arrow.rs  crop.rs  highlighter.rs  mod.rs  pen.rs  rect.rs  text.rs
src/ui/: mod.rs  theme.rs  toolbar.rs  topbar.rs
