[package]
name = "snapture"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.13.5", features = ["screenshot"] }
ab_glyph = "0.2.29"
arboard = "3.6.1"
dirs = "6.0.0"
eframe = { version = "0.32.0", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
fontdb = "0.23.0"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.25.0"
thiserror = "2.0.12"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
url = "2.5.4"
